@@ -451,6 +451,9 @@ rpmcliFini(poptContext optCon)
 	/*@modifies keyids @*/
 {
     extern rpmioPool _headerPool;
+#ifdef	NOTYET
+    extern rpmioPool _rpmmiPool;
+#endif
     extern rpmioPool _rpmdbPool;
 
     _rpmgiPool = rpmioFreePool(_rpmgiPool);
@@ -466,6 +469,9 @@ rpmcliFini(poptContext optCon)
     _rpmdsPool = rpmioFreePool(_rpmdsPool);
     _rpmfiPool = rpmioFreePool(_rpmfiPool);
 
+#ifdef	NOTYET
+    _rpmmiPool = rpmioFreePool(_rpmmiPool);
+#endif
     _rpmdbPool = rpmioFreePool(_rpmdbPool);
     _headerPool = rpmioFreePool(_headerPool);
 
